--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,8 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.0.2']
-
+        ruby-version: ['2.6', '2.7', '3.0', '3.0.2']
     steps:
     - uses: actions/checkout@v3
     - name: Set up Ruby
