--- a/.ruby-ci.yml
+++ b/.ruby-ci.yml
@@ -1,4 +1,4 @@
 project_type: ruby
 test:
   rpsec:
-    command: bundle exec rspec -format html --out .spec-reports/rspec.html spec/
+    command: bundle exec rspec --format html --out .spec-reports/rspec.html spec/
