--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .idea/
-
-# Ignore debug history
-.byebug_history
-
-# Ignore test result
-.spec-reports
+.vscode/
+node_modules/
+build/
+tmp/
+temp/
