--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "husky": "8.0.3",
     "jest": "29.7.0",
     "pngjs": "^7.0.0",
     "ts-node": "^10.9.2"
@@ -16,8 +17,8 @@
   "scripts": {
     "lint": "eslint ./src/**",
     "test": "jest",
-    "coverage": "npm run test -- --coverage",
-    "ci": "npm run lint && npm run coverage",
+    "coverage": "yarn run test -- --coverage",
+    "ci": "yarn run lint && yarn run coverage",
     "prepare": "husky install"
   },
   "dependencies": {
